src/objects/NLTrans__c.object
<CustomObject>
    <description>Sage History Nominal Ledger Transactions</description>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D1__c</fullName>
        <label>D1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D2__c</fullName>
        <label>D2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLA__c</fullName>
        <description>General Ledger Account</description>
        <label>GLA</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <length>8</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yr__c</fullName>
        <label>Yr</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>batch_reference__c</fullName>
        <label>batch_reference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>currency_amount__c</fullName>
        <label>currency_amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>currency_code__c</fullName>
        <label>currency_code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>exchange_rate__c</fullName>
        <label>exchange_rate</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>from_period__c</fullName>
        <label>from_period</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>journal_amount__c</fullName>
        <label>journal_amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>journal_date__c</fullName>
        <label>journal_date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>journal_desc__c</fullName>
        <label>journal_desc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>journal_number__c</fullName>
        <label>journal_number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nlyear__c</fullName>
        <label>nlyear</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>origin__c</fullName>
        <label>origin</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>post_date__c</fullName>
        <label>post_date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>posting_code__c</fullName>
        <label>posting_code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>seq__c</fullName>
        <label>seq</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>trans_period__c</fullName>
        <label>trans_period</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>transaction_date__c</fullName>
        <label>transaction_date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>transaction_group__c</fullName>
        <label>transaction_group</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vat_code__c</fullName>
        <label>vat_code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>NLTrans</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <columns>GLA__c</columns>
        <columns>journal_amount__c</columns>
        <columns>journal_date__c</columns>
        <columns>nlyear__c</columns>
        <columns>Period__c</columns>
        <columns>post_date__c</columns>
        <columns>transaction_date__c</columns>
        <columns>Yr__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>unique_no</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NLTrans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>